# arxiv-research-chatbot

./: .env  .gitignore  README.md  RLHF_Research.md  chatbot.py  llm_summary.md  mcp_chatbot.py  pre-commit-config.yaml  pyproject.toml  remote_server.py  requirements.txt  research_server.py  research_summary.md  start.py  summary.md  tools.py
computer-vision-flashcards/: README.md  package-lock.json  package.json
computer-vision-flashcards/.next/: trace
computer-vision-flashcards/.next/cache/webpack/client-development/: index.pack.gz.old
computer-vision-flashcards/.next/server/pages/: _app.js  _error.js  index.js
computer-vision-flashcards/.next/server/vendor-chunks/: @swc.js  next.js
computer-vision-flashcards/.next/static/chunks/: webpack.js
computer-vision-flashcards/.next/static/chunks/pages/: _app.js  index.js
computer-vision-flashcards/components/: Flashcard.js  FlashcardDeck.js
computer-vision-flashcards/data/: flashcards.js
computer-vision-flashcards/pages/: index.js
computer-vision-flashcards/styles/: globals.css
papers/anime/: papers_info.json
papers/china/: papers_info.json
papers/ffs/: papers_info.json
papers/japanese_anime/: papers_info.json
