[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.54.0",
    "arxiv>=2.2.0",
    "fastmcp>=2.8.1",
    "mcp>=1.9.4",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.0",
]
